# smart-home

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  compose.yaml  hello.py  pyproject.toml
